Linked all buttons to their corresponding pages (About, Contact, and Read More. Also updated the ScrollToTop function so that when the Read More button is clicked, it isn't overidden and taken to the top of a Page, but instead to its specific section. When performing the update for the Read More button, I had issues with offset space everytime the next Read More button was clicked, so I fixed this by updating the ProjectCards.css to reserve space for videos so that layout doesn't shift

--- a/front-end/vite-project/src/styles/ProjectCards.css
+++ b/front-end/vite-project/src/styles/ProjectCards.css
@@ -14,16 +14,18 @@
 }
 
 .project-media {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+
 }
 
 .project-video {
     border-radius: var(--img-border);
     border: solid 5px gray;
-    height: 100%;
     width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+    display: block;
+
 }
 
 .project-heading {
