--- a/front-end/vite-project/src/styles/ProjectPreview.css
+++ b/front-end/vite-project/src/styles/ProjectPreview.css
@@ -51,6 +51,6 @@
     margin-top: 10rem;
 }
 
-.view-more button {
+.view-more .btn {
     margin-top: 2rem;
 }
