--- a/front-end/vite-project/src/styles/ProjectsIntro.css
+++ b/front-end/vite-project/src/styles/ProjectsIntro.css
@@ -1,7 +1,7 @@
 
 .projects-intro {
     margin-top: 14rem;
-    margin-bottom: 25rem;
+    margin-bottom: 20rem;
 }
 
 .projects-intro-inner {
@@ -12,6 +12,6 @@
 }
 
 .projects-intro-inner p {
-    width: 40rem;
+    width: 45rem;
     text-align: center;
 }
